<resources>
    <string name="app_name">Movie Finder</string>
    <string name="selection_prompt">Choose a type</string>
    <string name="activity_header_movie_list">Movies/Series List</string>
    <string name="activity_header_movie_details">Movie Details</string>
    <string name="movie_search_hint">Enter movie/serial name</string>
    <string name="release_edit_text_hint">Enter year of Release (optional)</string>
    <string name="type_edit_text_hint">Select a type (optional)</string>
    <string name="txt_search">Search</string>

    <string-array name="type_array">
        <item>All</item>
        <item>Movie</item>
        <item>Series</item>
        <item>Episode</item>
    </string-array>

</resources>
