<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        style="@style/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header"
        android:layout_margin="20dp"
        android:background="@drawable/edit_text_background"
        android:paddingTop="5dp"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/label">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/grey"
            android:hint="@string/movie_search_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/txt_color_light"
            android:textColorHint="@color/blue"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/year_of_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_margin="20dp"
        android:background="@drawable/edit_text_background"
        android:paddingTop="5dp"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/label">

        <EditText
            android:id="@+id/et_year_of_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/grey"
            android:hint="@string/release_edit_text_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:singleLine="true"
            android:textColor="@color/txt_color_light"
            android:textColorHint="@color/blue"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/rl_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/year_of_release"
        android:layout_margin="20dp"
        android:background="@drawable/edit_text_background">

        <TextView
            android:id="@+id/tv_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/type_edit_text_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_spinner"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/dark_grey" />

        <Spinner
            android:id="@+id/selection_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_spinner"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:prompt="@string/selection_prompt"
            android:spinnerMode="dialog" />

    </RelativeLayout>

    <TextView
        android:id="@+id/footer_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/light_green"
        android:gravity="center"
        android:text="@string/txt_search"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>
